# ddd_assistant_agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
notebooks/: common_1.csv  common_2.csv  common_3.csv  document_processing.ipynb  drilling_fluid.csv  gas_reading_information.csv  operations.csv
src/ddr_assistant/: __init__.py  app.py
src/ddr_assistant/agents/: llama_agent.py
src/ddr_assistant/config/: __init__.py  database.py
src/ddr_assistant/prompts/: chat_prompts.py
src/ddr_assistant/tools/: db_tools.py
src/ddr_assistant/utils/: __init__.py  batch_processor.py  db_manager.py  guardrails.py  models.py  pdf_processor.py  report_processor.py
src/ddr_assistant/utils/data/: ddr_assistant.db
